--- a/background.css
+++ b/background.css
@@ -57,3 +57,44 @@ div{
     font-size: 80px;
     color:red;
 }
+
+/*---------------------------------------------------------------------old*/
+
+.fifth
+{
+    background-position: right center;
+}
+.fifth>h1{
+    font-size: 50px;
+    color:white;
+   
+    width: 80%;
+    margin-top:50px;
+    padding:50px;
+     /* background-color: teal;
+    opacity:0.5; */
+    background-color: rgba(50,70,60,0.2);
+    /* box-shadow:2px 5px 10px black; */
+     /* box-shadow:inset 10px 0px 50px black; */
+     box-shadow: 0px 0px 10px 10px lightgray,0px 0px 10px 20px gray,0px 0px 0px 30px black;
+    text-shadow:2px 5px 5px black;
+
+    }
+
+.sixth
+{
+    padding:20px;
+    box-sizing: border-box;
+    text-align: justify;
+    columns:6;
+    height: fit-content;
+    column-gap: 30px;
+    column-rule: 2px dotted black;
+}
+.sixth>h1{
+    column-span: all;
+}
+.sixth img
+{
+    width: 100%;
+}
