--- a/side.css
+++ b/side.css
@@ -11,6 +11,7 @@
     color:white;
     position: fixed;
     display: flex;
+    z-index: 99;
 }
 .sidebar
 {
@@ -124,4 +125,73 @@
 .mega li:hover div
 {
     display: block;
+}
+
+
+
+.clipath
+{
+    width:1000px;
+    height: 300px;
+    background-color: rgb(5, 41, 29);
+    margin-top:20px;
+    clip-path: polygon(0px 0px,1000px 0px,1000px 200px,500px 300px,0px 200px);
+    /* clip-path: polygon(20% 1%, 72% 0, 91% 15%, 100% 44%, 0 43%, 6% 17%); */
+}
+.nested
+{
+    width:1000px;
+    height: 500px;
+    border:1px solid red;
+}
+.nested section
+{
+    height: 500px;
+    width: 100%;
+    margin-top:5px;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    color:white;
+    font-size: 20px;
+    padding:50px;
+    box-sizing: border-box;
+}
+.nested section:nth-child(1)
+{
+    background-image: url("https://plus.unsplash.com/premium_photo-1686729237226-0f2edb1e8970?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8d2FsbHBhcGVyfGVufDB8fDB8fHww");
+}
+.nested section:nth-child(2)
+{
+    background-image: url("https://m.media-amazon.com/images/I/71Xu66Nem-L.jpg");
+}
+.nested section:nth-child(3)
+{
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREqRp5pzb59rEoOn3Z53TmEPbqzHvqf3wj5g&s");
+}
+
+.nested section:nth-child(4)
+{
+    background-image: url("https://wallpapers.com/images/featured/beautiful-3vau5vtfa3qn7k8v.jpg");
+}
+
+.nested section:nth-child(5)
+{
+    background-image: url("https://static.vecteezy.com/system/resources/thumbnails/049/855/471/small/nature-background-high-resolution-wallpaper-for-a-serene-and-stunning-view-free-photo.jpg");
+}
+
+.nested nav
+{
+    width:100%;
+    height: 50px;
+    background-color: rgb(2, 50, 50);
+    color:white;
+    position: sticky;
+    top:60px;
+    z-index: 999;
+}
+
+html
+{
+    scroll-behavior: smooth;
+    user-select: none;
 }
